--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/xyz/styles.css" />
   </head>
   <body>
     <h1>User Form</h1>
@@ -40,6 +40,6 @@
       </thead>
       <tbody></tbody>
     </table>
-    <script src="/js/script.js"></script>
+    <script src="/javascript/script.js"></script>
   </body>
 </html>
